# django-s3-session-storage

./: .gitignore  LICENSE  README.md  pyproject.toml
django_s3_session_storage/: __init__.py  storage.py
tests/: conftest.py  test_storage.py
